--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "motion": "^12.7.4",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
@@ -55,6 +56,7 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
+    "uuid": "^11.1.0",
     "vaul": "^1.1.2",
     "zod": "^3.24.3"
   },
